--- a/config.yaml
+++ b/config.yaml
@@ -30,7 +30,7 @@ params:
   disable_home: false
   profile_image: "/img/profile.jpg"
   name: "Dhia Gharsallaoui"
-  profession: "Data Engineer"
+  profession: "Data scientist"
   github: "https://github.com/dhia-gharsallaoui"
   linkedin: "https://www.linkedin.com/in/gharsallaoui-dhia-eddine/"
   facebook: "https://www.facebook.com/dhia.gharsallaoui/"
