--- a/hugo.yaml
+++ b/hugo.yaml
@@ -36,11 +36,10 @@ markup:
     #
 params:
   title: "Dhia Gharsallaoui"
-  description: "Solution Architect & Blockchain Developer passionate about building scalable systems"
+  description: "Distributed Platform Architect passionate about building scalable cloud-native systems and blockchain solutions"
   favicon: "/fav.png"
   useBootstrapCDN: false
   animate: true
-  # Enable mathjax for technical blog posts
   mathjax: true
 
   theme:
@@ -52,15 +51,14 @@ params:
     lineHeight: 1.5
     textAlign: left
 
-  # Custom color scheme
   color:
-    textColor: "#2d3748"          # Dark gray for text
-    secondaryTextColor: "#718096"  # Medium gray for secondary
-    textLinkColor: "#00b4d8"      # Bright cyan for links
-    backgroundColor: "#ffffff"     # White background
-    secondaryBackgroundColor: "#f8fafc"  # Very light gray
-    primaryColor: "#0077b6"       # Deep cyan for primary
-    secondaryColor: "#caf0f8"     # Light cyan for accents
+    textColor: "#2d3748"
+    secondaryTextColor: "#718096"
+    textLinkColor: "#00b4d8"
+    backgroundColor: "#ffffff"
+    secondaryBackgroundColor: "#f8fafc"
+    primaryColor: "#0077b6"
+    secondaryColor: "#caf0f8"
 
   navbar:
     align: ms-auto
@@ -81,8 +79,8 @@ params:
     enable: true
     intro: "Hi, I'm"
     title: "Dhia Gharsallaoui"
-    subtitle: "Solution Architect & Blockchain Developer"
-    content: "A passionate architect building scalable systems and blockchain solutions. I specialize in cloud architecture, distributed systems, and blockchain development."
+    subtitle: "Distributed Platform Architect"
+    content: "A passionate architect combining design and hands-on implementation of cloud-native solutions. I specialize in distributed systems, real-time data processing, and blockchain development."
     image: /images/profile.jpg
     button:
       enable: true
@@ -104,31 +102,37 @@ params:
     title: "About Me"
     image: "/images/profile.jpg"
     content: |-
-      A Solution Architect with expertise in Cloud Computing and Blockchain Technology. I specialize in designing and implementing scalable, distributed systems that solve complex business problems.
+      A Distributed Platform Architect with 3 years of experience in designing and implementing scalable, cloud-native solutions. I specialize in microservices architecture, distributed data processing, and blockchain development.
 
-      I'm a strong advocate for 📜 open source, ☁️ Cloud computing, 🔗 Blockchain, and 🤖 Automation. My approach combines technical excellence with practical business solutions.
+      I'm passionate about 📜 open source, ☁️ cloud-native architectures, 🔗 blockchain protocols, and 📊 real-time data platforms. My approach combines architectural excellence with hands-on implementation.
 
-      Currently focusing on blockchain infrastructure development and cloud-native architectures while contributing to various open-source projects.
+      Currently focused on building distributed platforms, implementing blockchain bridges, and contributing to open-source projects in data engineering and system integration.
     skills:
       enable: true
-      title: "Here are some technologies I've been working with:"
+      title: "Technologies I work with:"
       items:
         - "Go (Golang)"
-        - "Scala"
         - "Python"
+        - "Scala"
         - "Solidity"
         - "TypeScript"
         - "Kubernetes"
         - "Docker"
         - "Ansible"
         - "Apache Spark"
+        - "Delta Lake"
         - "Apache Kafka"
         - "PostgreSQL"
-        - "Web3.js"
-        - "Smart Contracts"
-        - "XRPL"
+        - "TimescaleDB"
+        - "Redis"
+        - "Prometheus"
         - "Grafana"
         - "Elasticsearch"
+        - "OpenTelemetry"
+        - "Helm"
+        - "GitLab CI"
+        - "Smart Contracts"
+        - "XRPL"
 
   experience:
     enable: true
@@ -142,17 +146,18 @@ params:
           name: "Company Website"
           url: "https://skilld.cloud/"
         content: |
-          Lead architect responsible for designing and implementing scalable cloud-native solutions.
+          Designing and implementing scalable cloud-native solutions with focus on distributed systems.
 
           Key Achievements:
-          - Architected and designed reliable platforms using Microservices, Domain Driven, and Event Driven designs
-          - Implemented SSO architecture for platform cross applications using Ory ecosystem
-          - Engineered Spark data pipelines achieving 80% build time improvement
-          - Designed and developed scalable Go microservices
-          - Implemented comprehensive monitoring using Grafana, Elasticsearch, and Prometheus
-          - Managed Kubernetes clusters and streamlined CI/CD processes
-          - Developed sophisticated data storage solutions with PostgreSQL
-          - Led adoption of cutting-edge open source technologies
+          - Designed and developed scalable microservices using Golang and domain-driven design principles
+          - Designed and maintained multi-cluster Kubernetes infrastructure with helm charts
+          - Engineered monitoring stack using Prometheus, Grafana, and Elasticsearch
+          - Implemented distributed tracing using OpenTelemetry for end-to-end visibility
+          - Developed stream processing pipelines using Apache Spark and Delta Lake
+          - Contributed to infrastructure automation using Ansible
+          - Designed event-driven architecture using Apache Kafka, NATS, and Redis
+          - Implemented SSO integration using Ory ecosystem
+          - Contributed to CI/CD pipeline development using GitLab CI
 
       - job: "Blockchain Developer"
         company: "ChainsAtlas"
@@ -162,14 +167,14 @@ params:
           name: "Company Website"
           url: "https://chainsatlas.com/"
         content: |
-          Specialized in blockchain development and smart contract engineering.
+          Specialized in blockchain development and cross-chain solutions.
 
           Key Projects:
-          - Developed multi-chain bridge protocols for EVM-XRPL integration
-          - Architected gaming reward systems with multi-signature validation
-          - Implemented robust transaction processing systems
-          - Designed secure cross-chain operations
-          - Created comprehensive testing environments
+          - Developed multi-chain bridge protocols integrating EVM-compatible chains with XRPL
+          - Architected battle reward systems with multi-signature validation
+          - Built robust transaction processing systems with retry logic
+          - Designed agnostic blockchain operations with smart contracts
+          - Enhanced blockchain bridging infrastructure with verifier systems
 
       - job: "Software Engineer"
         company: "idatase GmbH"
@@ -179,43 +184,38 @@ params:
           name: "Company Website"
           url: "https://netlume.net/"
         content: |
-          Led the development of data aggregation systems and APIs.
+          Developed scalable data ingestion and processing systems.
 
           Achievements:
-          - Developed scalable data aggregation API system
-          - Architected microservices using Python/Flask and PostgreSQL
-          - Implemented JWT-based authentication
-          - Created automated CI/CD pipelines
-          - Designed flexible data source connectors
+          - Developed scalable data ingestion pipeline using Python/Flask and PostgreSQL
+          - Implemented containerized microservices using Docker Compose and Kubernetes
+          - Created automated testing and deployment pipeline using GitHub Actions
+          - Designed real-time metrics collection system
 
   education:
     enable: true
     items:
-      - title: "Master MODO: Modeling, Optimization, Decision, Organization"
+      - title: "Master's Degree in Computer Science"
         school:
-          name: "Mines ParisTech & Université Paris-Dauphine"
+          name: "MINES ParisTech"
           url: "https://www.minesparis.psl.eu/"
         date: "2020 - 2021"
         content: |-
-          Specialization in Computer Science and Mathematics
-          - Advanced algorithms and optimization
-          - Machine learning and data science
-          - Decision theory and operations research
+          Minor in Mathematics
+          Focus on Distributed Systems and Cloud Computing
         featuredLink:
           enable: true
           name: "View Institution"
           url: "https://www.minesparis.psl.eu/"
 
-      - title: "National Engineering Diploma"
+      - title: "Engineer's Degree in Industrial Engineering"
         school:
-          name: "National Engineering School of Tunis (ENIT)"
+          name: "ENIT"
           url: "http://www.enit.rnu.tn/"
         date: "2018 - 2021"
         content: |-
-          Industrial Engineering with focus on Data Science
-          - Software engineering and system design
-          - Data analysis and machine learning
-          - Industrial automation and control systems
+          Minor in Data Science
+          Specialization in Big Data Analytics
         featuredLink:
           enable: true
           name: "View Institution"
@@ -225,7 +225,7 @@ params:
     enable: true
     items:
       - title: "Mage-ai"
-        content: "Contributed to the open-source data pipeline tool by adding LDAP authentication, Apache Druid integration, and logger centralization."
+        content: "Implemented LDAP authentication, Apache Druid integration, and centralized logging system for this open-source data pipeline tool."
         image: /images/projects/mage-ai.png
         featured:
           name: "View Project"
@@ -239,7 +239,7 @@ params:
             url: https://github.com/mage-ai/mage-ai
 
       - title: "Go-mail"
-        content: "Implemented middleware concept, tests, and OpenPGP encryption middleware for Go email handling library."
+        content: "Developed middleware architecture pattern and implemented OpenPGP encryption middleware with comprehensive test coverage."
         image: /images/projects/go-mail.svg
         featured:
           name: "View Project"
@@ -253,7 +253,7 @@ params:
             url: https://github.com/wneessen/go-mail/
 
       - title: "Go-RTE"
-        content: "Developed Go client library for RTE API integration."
+        content: "Created a Go client library for RTE APIs with clean and uniform way to interact with different API endpoints."
         image: /images/projects/go-rte.png
         featured:
           name: "View Project"
@@ -266,17 +266,17 @@ params:
           - icon: fab fa-github
             url: https://github.com/dhia-gharsallaoui/gorte
 
-  achievements:
-    enable: true
-    items:
-      - title: "Scrum Fundamentals Certified (SFC™)"
-        content: "Professional certification in Scrum methodology and agile practices"
-        url: "https://www.scrumstudy.com/certification/verify?type=SFC&number=838205"
-        image: /images/scrum.jpg
-
-      - title: "Supervised Machine Learning: Regression"
-        content: "IBM certification in advanced machine learning techniques"
-        image: "/images/Supervised Machine Learning: Regression.jpg"
+  # achievements:
+  #   enable: true
+  #   items:
+  #     - title: "Scrum Fundamentals Certified (SFC™)"
+  #       content: "Professional certification in Scrum methodology and agile practices"
+  #       url: "https://www.scrumstudy.com/certification/verify?type=SFC&number=838205"
+  #       image: /images/scrum.jpg
+  # 
+  #     - title: "Supervised Machine Learning: Regression"
+  #       content: "IBM certification in advanced machine learning techniques"
+  #       image: "/images/Supervised Machine Learning: Regression.jpg"
 
   contact:
     enable: true
@@ -295,11 +295,9 @@ params:
       github: https://github.com/dhia-gharsallaoui
       linkedin: https://www.linkedin.com/in/gharsallaoui-dhia-eddine/
 
-  # List pages like blogs and posts
   listPages:
     disableFeaturedImage: false
 
-  # Single pages like blog and post
   singlePages:
     socialShare: true
     readTime:
@@ -308,7 +306,6 @@ params:
     scrollprogress:
       enable: true
 
-  # For translations
   terms:
     read: "Read"
     toc: "Table Of Contents"
